kubernetes/apps/networking/ingresses/ingressRoutes/external-services/nextcloud-external/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app nextcloud-external
  namespace: networking
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ExternalName
  externalName: tonibrix
  ports:
    - name: webui
      port: 8888
      protocol: TCP
      targetPort: 8888
