kubernetes/apps/networking/ingresses/ingressRoutes/external-services/nextcloud-external/ingress-traefikCRD.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: &name nextcloud-external
  namespace: networking
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`nextcloud.${SECRET_DOMAIN}`)
      middlewares:
        - name: headers
          namespace: networking
        - name: nextcloud-redirect-1
          namespace: networking
        - name: nextcloud-redirect-2
          namespace: networking
      services:
        - name: *name
          port: 8888
          namespace: networking
  tls:
    secretName: ${SECRET_CERT_NAME}-prod-tls
